<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sprint1</name>
  <version>0.0.0</version>
  <description>The sprint1 package</description> <!-- Replace TODO with actual description -->
  <maintainer email="finn.a.witney@student.uts.edu.au">finn</maintainer>
  <license>MIT</license> <!-- Replace TODO with actual license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launchfile />
  </export>
</package>
