<?xml version="1.0"?>
<package format="3">
  <name>scan_matching_localizer</name>
  <version>0.0.1</version>
  <description>A ROS 2 node for scan matching localization.</description>
  <maintainer email="megha.martin21@gmail.com">Megha Martin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Add OpenCV dependency -->
  <depend>opencv4</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
